...

    return Padding(
      padding: const EdgeInsets.symmetric(horizontal: 8),
      child: Row(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          buildDot(0, 'Email', Icons.mail_outline_rounded),
          buildDivider(0),
          buildDot(1, 'Verify OTP', Icons.pin_outlined),
          buildDivider(1),
          buildDot(2, 'New Pass', Icons.lock_outline_rounded),
        ],
      ),
...
