appId: com.example.expense_tracking_prd
---
- launchApp
- runFlow:
    when:
      notVisible: "Email"
    commands:
      - tapOn: "Profile"
      - tapOn: "Sign Out"
      - tapOn: "Sign Out"
- tapOn: "Email"
- inputText: "hr@example.com"
- tapOn: "Password"
- inputText: "password"
- tapOn: "Sign In to GW project"
- extendedWaitUntil:
    visible: "GW Project Financials"
    timeout: 10000
- assertVisible: "GW Project Financials"
- tapOn: "Employees"
- assertVisible: "All Employees"
- tapOn: "Reports"
- assertVisible: "Generate Report"
- tapOn: "Settings"
- assertVisible: "System Configuration"
- tapOn: "Profile"
- tapOn: "Sign Out"
- tapOn: "Sign Out"
